--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,230 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{zhan_proximal_2019,
+  title = {Proximal recolonization by self-renewing microglia re-establishes microglial homeostasis in the adult mouse brain},
+  volume = {17},
+  issn = {1545-7885},
+  url = {https://dx.plos.org/10.1371/journal.pbio.3000134},
+  doi = {10.1371/journal.pbio.3000134},
+  language = {en},
+  number = {2},
+  urldate = {2025-08-24},
+  journal = {PLOS Biology},
+  author = {Zhan, Lihong and Krabbe, Grietje and Du, Fei and Jones, Ian and Reichert, Meredith C. and Telpoukhovskaia, Maria and Kodama, Lay and Wang, Chao and Cho, Seo-hyun and Sayed, Faten and Li, Yaqiao and Le, David and Zhou, Yungui and Shen, Yin and West, Brian and Gan, Li},
+  month = feb,
+  year = {2019},
+  pages = {e3000134},
+  file = {Full Text:/Users/enrach/Zotero/storage/HM43AGWU/Zhan et al. - 2019 - Proximal recolonization by self-renewing microglia re-establishes microglial homeostasis in the adul.pdf:application/pdf},
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{song_mapping_2019,
+  title = {Mapping cis-regulatory chromatin contacts in neural cells links neuropsychiatric disorder risk variants to target genes},
+  volume = {51},
+  issn = {1061-4036, 1546-1718},
+  url = {https://www.nature.com/articles/s41588-019-0472-1},
+  doi = {10.1038/s41588-019-0472-1},
+  language = {en},
+  number = {8},
+  urldate = {2025-08-24},
+  journal = {Nature Genetics},
+  author = {Song, Michael and Yang, Xiaoyu and Ren, Xingjie and Maliskova, Lenka and Li, Bingkun and Jones, Ian R. and Wang, Chao and Jacob, Fadi and Wu, Kenneth and Traglia, Michela and Tam, Tsz Wai and Jamieson, Kirsty and Lu, Si-Yao and Ming, Guo-Li and Li, Yun and Yao, Jun and Weiss, Lauren A. and Dixon, Jesse R. and Judge, Luke M. and Conklin, Bruce R. and Song, Hongjun and Gan, Li and Shen, Yin},
+  month = aug,
+  year = {2019},
+  pages = {1252--1262},
+  file = {Submitted Version:/Users/enrach/Zotero/storage/TJ4TTDDI/Song et al. - 2019 - Mapping cis-regulatory chromatin contacts in neural cells links neuropsychiatric disorder risk varia.pdf:application/pdf},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{song_cell-type-specific_2020,
+  title = {Cell-type-specific {3D} epigenomes in the developing human cortex},
+  volume = {587},
+  issn = {0028-0836, 1476-4687},
+  url = {https://www.nature.com/articles/s41586-020-2825-4},
+  doi = {10.1038/s41586-020-2825-4},
+  language = {en},
+  number = {7835},
+  urldate = {2025-08-24},
+  journal = {Nature},
+  author = {Song, Michael and Pebworth, Mark-Phillip and Yang, Xiaoyu and Abnousi, Armen and Fan, Changxu and Wen, Jia and Rosen, Jonathan D. and Choudhary, Mayank N. K. and Cui, Xiekui and Jones, Ian R. and Bergenholtz, Seth and Eze, Ugomma C. and Juric, Ivan and Li, Bingkun and Maliskova, Lenka and Lee, Jerry and Liu, Weifang and Pollen, Alex A. and Li, Yun and Wang, Ting and Hu, Ming and Kriegstein, Arnold R. and Shen, Yin},
+  month = nov,
+  year = {2020},
+  pages = {644--649},
+  file = {Submitted Version:/Users/enrach/Zotero/storage/YYL8PT2B/Song et al. - 2020 - Cell-type-specific 3D epigenomes in the developing human cortex.pdf:application/pdf},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{ren_parallel_2021,
+  title = {Parallel characterization of cis-regulatory elements for multiple genes using {CRISPRpath}},
+  volume = {7},
+  issn = {2375-2548},
+  url = {https://www.science.org/doi/10.1126/sciadv.abi4360},
+  doi = {10.1126/sciadv.abi4360},
+  abstract = {A new CRISPR screening strategy allows characterizing enhancers for multiple genes associated with converging phenotypes.
+          , 
+            Current pooled CRISPR screens for cis-regulatory elements (CREs), based on transcriptional output changes, are typically limited to characterizing CREs of only one gene. Here, we describe CRISPRpath, a scalable screening strategy for parallelly characterizing CREs of genes linked to the same biological pathway and converging phenotypes. We demonstrate the ability of CRISPRpath for simultaneously identifying functional enhancers of six genes in the 6-thioguanine–induced DNA mismatch repair pathway using both CRISPR interference (CRISPRi) and CRISPR nuclease (CRISPRn) approaches. Sixty percent of the identified enhancers are known promoters with distinct epigenomic features compared to other active promoters, including increased chromatin accessibility and interactivity. Furthermore, by imposing different levels of selection pressure, CRISPRpath can distinguish enhancers exerting strong impact on gene expression from those exerting weak impact. Our results offer a nuanced view of cis-regulation and demonstrate that CRISPRpath can be leveraged for understanding the complex gene regulatory program beyond transcriptional output at scale.},
+  language = {en},
+  number = {38},
+  urldate = {2025-08-24},
+  journal = {Science Advances},
+  author = {Ren, Xingjie and Wang, Mengchi and Li, Bingkun and Jamieson, Kirsty and Zheng, Lina and Jones, Ian R. and Li, Bin and Takagi, Maya Asami and Lee, Jerry and Maliskova, Lenka and Tam, Tsz Wai and Yu, Miao and Hu, Rong and Lee, Lindsay and Abnousi, Armen and Li, Gang and Li, Yun and Hu, Ming and Ren, Bing and Wang, Wei and Shen, Yin},
+  month = sep,
+  year = {2021},
+  pages = {eabi4360},
+  file = {Full Text PDF:/Users/enrach/Zotero/storage/YMZY5MUW/Ren et al. - 2021 - Parallel characterization of cis-regulatory elements for multiple genes using CRISPRpath.pdf:application/pdf},
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{rosen_hprep_2021,
+  title = {{HPRep}: {Quantifying} {Reproducibility} in {HiChIP} and {PLAC}-{Seq} {Datasets}},
+  volume = {43},
+  copyright = {https://creativecommons.org/licenses/by/4.0/},
+  issn = {1467-3045},
+  shorttitle = {{HPRep}},
+  url = {https://www.mdpi.com/1467-3045/43/2/82},
+  doi = {10.3390/cimb43020082},
+  abstract = {HiChIP and PLAC-Seq are emerging technologies for studying genome-wide long-range chromatin interactions mediated by the protein of interest, enabling more sensitive and cost-efficient interrogation of protein-centric chromatin conformation. However, due to the unbalanced read distribution introduced by protein immunoprecipitation, existing reproducibility measures developed for Hi-C data are not appropriate for the analysis of HiChIP and PLAC-Seq data. Here, we present HPRep, a stratified and weighted correlation metric derived from normalized contact counts, to quantify reproducibility in HiChIP and PLAC-Seq data. We applied HPRep to multiple real datasets and demonstrate that HPRep outperforms existing reproducibility measures developed for Hi-C data. Specifically, we applied HPRep to H3K4me3 PLAC-Seq data from mouse embryonic stem cells and mouse brain tissues as well as H3K27ac HiChIP data from human lymphoblastoid cell line GM12878 and leukemia cell line K562, showing that HPRep can more clearly separate among pseudo-replicates, real replicates, and non-replicates. Furthermore, in an H3K4me3 PLAC-Seq dataset consisting of 11 samples from four human brain cell types, HPRep demonstrated the expected clustering of data that could not be achieved by existing methods developed for Hi-C data, highlighting the need for a reproducibility metric tailored to HiChIP and PLAC-Seq data.},
+  language = {en},
+  number = {2},
+  urldate = {2025-08-24},
+  journal = {Current Issues in Molecular Biology},
+  author = {Rosen, Jonathan D. and Yang, Yuchen and Abnousi, Armen and Chen, Jiawen and Song, Michael and Jones, Ian R. and Shen, Yin and Hu, Ming and Li, Yun},
+  month = sep,
+  year = {2021},
+  pages = {1156--1170},
+  file = {Full Text:/Users/enrach/Zotero/storage/HVEDHNI4/Rosen et al. - 2021 - HPRep Quantifying Reproducibility in HiChIP and PLAC-Seq Datasets.pdf:application/pdf},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{ypsilanti_transcriptional_2021,
+  title = {Transcriptional network orchestrating regional patterning of cortical progenitors},
+  volume = {118},
+  issn = {0027-8424, 1091-6490},
+  url = {https://pnas.org/doi/full/10.1073/pnas.2024795118},
+  doi = {10.1073/pnas.2024795118},
+  abstract = {Significance
+            Development of cortical areas begins in cortical stem cells through the action of morphogens controlling the graded expression of transcription factors (TFs). Here, we have systematically identified the TFs and gene regulatory elements (REs) that together control regional pattering of the cortical progenitor zone; these data have led us to propose a cortical regionalization TF network. To identify REs active in this network, we performed TF chromatin immunoprecipitation followed by sequencing (ChIP-seq) and chromatin-looping conformation experiments as well as assays for epigenomic marks and DNA accessibility in purified ventricular zone (VZ) progenitor cells in wild-type and patterning mutant mice. This integrated approach has laid the foundations to identify a TF network and cortical VZ REs involved in cortical regional patterning.
+          , 
+            
+              We uncovered a transcription factor (TF) network that regulates cortical regional patterning in radial glial stem cells. Screening the expression of hundreds of TFs in the developing mouse cortex identified 38 TFs that are expressed in gradients in the ventricular zone (VZ). We tested whether their cortical expression was altered in mutant mice with known patterning defects (
+              Emx2, Nr2f1
+              , and
+              Pax6
+              ), which enabled us to define a cortical regionalization TF network (CRTFN). To identify genomic programming underlying this network, we performed TF ChIP-seq and chromatin-looping conformation to identify enhancer–gene interactions. To map enhancers involved in regional patterning of cortical progenitors, we performed assays for epigenomic marks and DNA accessibility in VZ cells purified from wild-type and patterning mutant mice. This integrated approach has identified a CRTFN and VZ enhancers involved in cortical regional patterning in the mouse.},
+  language = {en},
+  number = {51},
+  urldate = {2025-08-24},
+  journal = {Proceedings of the National Academy of Sciences},
+  author = {Ypsilanti, Athéna R. and Pattabiraman, Kartik and Catta-Preta, Rinaldo and Golonzhka, Olga and Lindtner, Susan and Tang, Ke and Jones, Ian R. and Abnousi, Armen and Juric, Ivan and Hu, Ming and Shen, Yin and Dickel, Diane E. and Visel, Axel and Pennacchio, Len A. and Hawrylycz, Michael and Thompson, Carol L. and Zeng, Hongkui and Barozzi, Iros and Nord, Alex S. and Rubenstein, John L.},
+  month = dec,
+  year = {2021},
+  pages = {e2024795118},
+  file = {Full Text PDF:/Users/enrach/Zotero/storage/ET4P7MVL/Ypsilanti et al. - 2021 - Transcriptional network orchestrating regional patterning of cortical progenitors.pdf:application/pdf},
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{jones_high-throughput_2022,
+  title = {High-throughput {CRISPRi} and {CRISPRa} technologies in {3D} genome regulation for neuropsychiatric diseases},
+  volume = {31},
+  copyright = {https://academic.oup.com/journals/pages/open\_access/funder\_policies/chorus/standard\_publication\_model},
+  issn = {0964-6906, 1460-2083},
+  url = {https://academic.oup.com/hmg/article/31/R1/R47/6668622},
+  doi = {10.1093/hmg/ddac193},
+  abstract = {Abstract
+            Advances in genomics have led to the identification of many risk loci with hundreds of genes and thousands of DNA variants associated with neuropsychiatric disorders. A significant barrier to understanding the genetic underpinnings of complex diseases is the lack of functional characterization of risk genes and variants in biological systems relevant to human health and connecting disease-associated variants to pathological phenotypes. Characterizing gene and DNA variant functions requires genetic perturbations followed by molecular and cellular assays of neurobiological phenotypes. However, generating null or mutant alleles is low throughput, making it impossible to characterize disease-associated variants in large quantities efficiently. CRISPR interference (CRISPRi) and CRISPR activation (CRISPRa) screens can be leveraged to dissect the biological consequences of the tested genes and variants in their native context. Nevertheless, testing non-coding variants associated with complex diseases remains non-trivial. In this review, we first discuss the current challenges of interpreting the function of the non-coding genome and approaches to prioritizing disease-associated variants in the context of the 3D epigenome. Second, we provide a brief overview of high-throughput CRISPRi and CRISPRa screening strategies applicable for characterizing non-coding sequences in appropriate biological systems. Lastly, we discuss the promising prospects of using CRISPR-based technologies to dissect DNA sequences associated with neuropsychiatric diseases.},
+  language = {en},
+  number = {R1},
+  urldate = {2025-08-24},
+  journal = {Human Molecular Genetics},
+  author = {Jones, Ian R and Ren, Xingjie and Shen, Yin},
+  month = oct,
+  year = {2022},
+  pages = {R47--R53},
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@article{yang_functional_2023,
+  title = {Functional characterization of {Alzheimer}’s disease genetic variants in microglia},
+  volume = {55},
+  issn = {1061-4036, 1546-1718},
+  url = {https://www.nature.com/articles/s41588-023-01506-8},
+  doi = {10.1038/s41588-023-01506-8},
+  language = {en},
+  number = {10},
+  urldate = {2025-08-24},
+  journal = {Nature Genetics},
+  author = {Yang, Xiaoyu and Wen, Jia and Yang, Han and Jones, Ian R. and Zhu, Xiaodong and Liu, Weifang and Li, Bingkun and Clelland, Claire D. and Luo, Wenjie and Wong, Man Ying and Ren, Xingjie and Cui, Xiekui and Song, Michael and Liu, Hongjiang and Chen, Cady and Eng, Nicolas and Ravichandran, Mirunalini and Sun, Yang and Lee, David and Van Buren, Eric and Jiang, Min-Zhi and Chan, Candace S. Y. and Ye, Chun Jimmie and Perera, Rushika M. and Gan, Li and Li, Yun and Shen, Yin},
+  month = oct,
+  year = {2023},
+  pages = {1735--1744},
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{liang_conserved_2024,
+  title = {A conserved molecular logic for neurogenesis to gliogenesis switch in the cerebral cortex},
+  volume = {121},
+  issn = {0027-8424, 1091-6490},
+  url = {https://pnas.org/doi/10.1073/pnas.2321711121},
+  doi = {10.1073/pnas.2321711121},
+  abstract = {During development, neural stem cells in the cerebral cortex, also known as radial glial cells (RGCs), generate excitatory neurons, followed by production of cortical macroglia and inhibitory neurons that migrate to the olfactory bulb (OB). Understanding the mechanisms for this lineage switch is fundamental for unraveling how proper numbers of diverse neuronal and glial cell types are controlled. We and others recently showed that Sonic Hedgehog (Shh) signaling promotes the cortical RGC lineage switch to generate cortical oligodendrocytes and OB interneurons. During this process, cortical RGCs generate intermediate progenitor cells that express critical gliogenesis genes
+              Ascl1
+              ,
+              Egfr,
+              and
+              Olig2
+              . The increased
+              Ascl1
+              expression and appearance of Egfr
+              +
+              and Olig2
+              +
+              cortical progenitors are concurrent with the switch from excitatory neurogenesis to gliogenesis and OB interneuron neurogenesis in the cortex. While Shh signaling promotes
+              Olig2
+              expression in the developing spinal cord, the exact mechanism for this transcriptional regulation is not known. Furthermore, the transcriptional regulation of
+              Olig2
+              and
+              Egfr
+              has not been explored. Here, we show that in cortical progenitor cells, multiple regulatory programs, including Pax6 and Gli3, prevent precocious expression of
+              Olig2
+              , a gene essential for production of cortical oligodendrocytes and astrocytes. We identify multiple enhancers that control
+              Olig2
+              expression in cortical progenitors and show that the mechanisms for regulating
+              Olig2
+              expression are conserved between the mouse and human. Our study reveals evolutionarily conserved regulatory logic controlling the lineage switch of cortical neural stem cells.},
+  language = {en},
+  number = {20},
+  urldate = {2025-08-24},
+  journal = {Proceedings of the National Academy of Sciences},
+  author = {Liang, Xiaoyi G. and Hoang, Kendy and Meyerink, Brandon L. and Kc, Pratiksha and Paraiso, Kitt and Wang, Li and Jones, Ian R. and Zhang, Yue and Katzman, Sol and Finn, Thomas S. and Tsyporin, Jeremiah and Qu, Fangyuan and Chen, Zhaoxu and Visel, Axel and Kriegstein, Arnold and Shen, Yin and Pilaz, Louis-Jan and Chen, Bin},
+  month = may,
+  year = {2024},
+  pages = {e2321711121},
+  file = {Full Text:/Users/enrach/Zotero/storage/BGYWGQJE/Liang et al. - 2024 - A conserved molecular logic for neurogenesis to gliogenesis switch in the cerebral cortex.pdf:application/pdf},
+}
+
+@article{longhurst_prc21_2025,
+  title = {The {PRC2}.1 subcomplex opposes {G1} progression through regulation of {CCND1} and {CCND2}},
+  volume = {13},
+  issn = {2050-084X},
+  url = {https://elifesciences.org/articles/97577},
+  doi = {10.7554/eLife.97577},
+  abstract = {Progression through the G1 phase of the cell cycle is the most highly regulated step in cellular division. We employed a chemogenetic approach to discover novel cellular networks that regulate cell cycle progression. This approach uncovered functional clusters of genes that altered sensitivity of cells to inhibitors of the G1/S transition. Mutation of components of the Polycomb Repressor Complex 2 rescued proliferation inhibition caused by the CDK4/6 inhibitor palbociclib, but not to inhibitors of S phase or mitosis. In addition to its core catalytic subunits, mutation of the PRC2.1 accessory protein MTF2, but not the PRC2.2 protein JARID2, rendered cells resistant to palbociclib treatment. We found that PRC2.1 (MTF2), but not PRC2.2 (JARID2), was critical for promoting H3K27me3 deposition at CpG islands genome-wide and in promoters. This included the CpG islands in the promoter of the CDK4/6 cyclins CCND1 and CCND2, and loss of MTF2 lead to upregulation of both CCND1 and CCND2. Our results demonstrate a role for PRC2.1, but not PRC2.2, in antagonizing G1 progression in a diversity of cell linages, including chronic myeloid leukemia (CML), breast cancer, and immortalized cell lines.},
+  language = {en},
+  urldate = {2025-08-24},
+  journal = {eLife},
+  author = {Longhurst, Adam D and Wang, Kyle and Suresh, Harsha Garadi and Ketavarapu, Mythili and Ward, Henry N and Jones, Ian R and Narayan, Vivek and Hundley, Frances V and Hassan, Arshia Zernab and Boone, Charles and Myers, Chad L and Shen, Yin and Ramani, Vijay and Andrews, Brenda J and Toczyski, David P},
+  month = feb,
+  year = {2025},
+  pages = {RP97577},
+  file = {Full Text PDF:/Users/enrach/Zotero/storage/IZEZ52M5/Longhurst et al. - 2025 - The PRC2.1 subcomplex opposes G1 progression through regulation of CCND1 and CCND2.pdf:application/pdf},
+}
+
+@article{cui_comparative_2025,
+  title = {Comparative characterization of human accelerated regions in neurons},
+  volume = {640},
+  issn = {0028-0836, 1476-4687},
+  url = {https://www.nature.com/articles/s41586-025-08622-x},
+  doi = {10.1038/s41586-025-08622-x},
+  language = {en},
+  number = {8060},
+  urldate = {2025-08-24},
+  journal = {Nature},
+  author = {Cui, Xiekui and Yang, Han and Cai, Charles and Beaman, Cooper and Yang, Xiaoyu and Liu, Hongjiang and Ren, Xingjie and Amador, Zachary and Jones, Ian R. and Keough, Kathleen C. and Zhang, Meng and Fair, Tyler and Abnousi, Armen and Mishra, Shreya and Ye, Zhen and Hu, Ming and Pollen, Alex A. and Pollard, Katherine S. and Shen, Yin},
+  month = apr,
+  year = {2025},
+  pages = {991--999},
 }
