add movies, remove pages, and select publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -136,6 +136,7 @@
   month = oct,
   year = {2022},
   pages = {R47--R53},
+  selected={true},
 }
 
 @article{yang_functional_2023,
@@ -227,4 +228,25 @@
   month = apr,
   year = {2025},
   pages = {991--999},
+}
+
+
+@misc{yang_functional_2023-1,
+  title = {Functional characterization of gene regulatory elements and neuropsychiatric disease-associated risk loci in {iPSCs} and {iPSC}-derived neurons},
+  url = {http://biorxiv.org/lookup/doi/10.1101/2023.08.30.555359},
+  doi = {10.1101/2023.08.30.555359},
+  abstract = {Abstract
+          
+            Genome-wide association studies (GWAS) have identified thousands of non-coding variants that contribute to psychiatric disease risks, likely by perturbing
+            cis
+            -regulatory elements (CREs). However, our ability to interpret and explore their mechanisms of action is hampered by a lack of annotation of functional CREs (fCREs) in neural cell types. Here, through genome-scale CRISPR screens of 22,000 candidate CREs (cCREs) in human induced pluripotent stem cells (iPSCs) undergoing differentiation to excitatory neurons, we identify 2,847 and 5,540 fCREs essential for iPSC fitness and neuronal differentiation, respectively. These fCREs display dynamic epigenomic features and exhibit increased numbers and genomic spans of chromatin interactions following terminal neuronal differentiation. Furthermore, fCREs essential for neuronal differentiation show significantly greater enrichment of genetic heritability for neurodevelopmental diseases including schizophrenia (SCZ), attention deficit hyperactivity disorder (ADHD), and autism spectrum disorders (ASD) than cCREs. Using high-throughput prime editing screens we experimentally confirm 45 SCZ risk variants that act by affecting the function of fCREs. The extensive and in-depth functional annotation of cCREs in neuronal types therefore provides a crucial resource for interpreting non-coding risk variants of neuropsychiatric disorders.},
+  language = {en},
+  urldate = {2025-08-25},
+  publisher = {Genetics},
+  author = {Yang, Xiaoyu and Jones, Ian R. and Chen, Poshen B. and Yang, Han and Ren, Xingjie and Zheng, Lina and Li, Bin and Li, Yang Eric and Sun, Quan and Wen, Jia and Beaman, Cooper and Cui, Xiekui and Li, Yun and Wang, Wei and Hu, Ming and Ren, Bing and Shen, Yin},
+  month = aug,
+  year = {2023},
+  file = {Submitted Version:/Users/enrach/Zotero/storage/4D2E5N57/Yang et al. - 2023 - Functional characterization of gene regulatory elements and neuropsychiatric disease-associated risk.pdf:application/pdf},
+  selected={true},
+  
 }
